--- a/INTERNSHIP ASSIGNMENT.ipynb
+++ b/INTERNSHIP ASSIGNMENT.ipynb
@@ -649,11 +649,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel(r\"C:\\Users\\jhaan\\Desktop\\RGI_Network_List_3527\\task1.xls\")"
+    "df1.to_excel(r\"C:\\Users\\jhaan\\Desktop\\RGI_Network_List_3527\\task1.xls\")"
    ]
   },
   {
