--- a/INTERNSHIP ASSIGNMENT.ipynb
+++ b/INTERNSHIP ASSIGNMENT.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -292,44 +292,64 @@
        "[4411 rows x 13 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=pd.read_excel(r\"C:\\Users\\jhaan\\Desktop\\RGI_Network_List_3527\\task.xls\")\n",
-    "df\n"
+    "df=pd.read_excel(r\"C:\\Users\\jhaan\\Downloads\\RGI_Network_List_3527\\RGI_Network_List_3527.xls\")\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1=df.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Sr.No.', 'Provider Code', 'Hospital_Name', 'Address', 'State',\n",
-       "       'District', 'City', 'Area', 'Pin_Code', 'Pan_Card No.',\n",
-       "       'Account_Number', 'Vendor_Code', 'Key'],\n",
-       "      dtype='object')"
+       "Gujarat             48\n",
+       "Mumbai Region       24\n",
+       "Rest Maharashtra    17\n",
+       "Karnataka            6\n",
+       "NCR-Delhi            3\n",
+       "Tamil Nadu           2\n",
+       "Name: State, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "df1[\"State\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jhaan\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  \n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -364,6 +384,7 @@
        "      <th>Account_Number</th>\n",
        "      <th>Vendor_Code</th>\n",
        "      <th>Key</th>\n",
+       "      <th>Contact</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -382,6 +403,7 @@
        "      <td>200120110000327</td>\n",
        "      <td>194585</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9123456698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -398,6 +420,7 @@
        "      <td>059010200006828</td>\n",
        "      <td>194237</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9123456698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -414,6 +437,7 @@
        "      <td>50200001726409</td>\n",
        "      <td>475311</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9123456698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -430,6 +454,7 @@
        "      <td>OCC 412808192</td>\n",
        "      <td>193813</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9123456698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -446,9 +471,11 @@
        "      <td>1250004863</td>\n",
        "      <td>193850</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9123456698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -478,6 +505,7 @@
        "      <td>912020045649271</td>\n",
        "      <td>194457</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9123456698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
@@ -494,6 +522,7 @@
        "      <td>02520100012058</td>\n",
        "      <td>460499</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9650464908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
@@ -510,6 +539,7 @@
        "      <td>097302000001328</td>\n",
        "      <td>194762</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9650464908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
@@ -526,6 +556,7 @@
        "      <td>20003790926</td>\n",
        "      <td>194662</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9971440986</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
@@ -542,10 +573,11 @@
        "      <td>870030100001200</td>\n",
        "      <td>460842</td>\n",
        "      <td>0001</td>\n",
+       "      <td>9971440986</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 13 columns</p>\n",
+       "<p>100 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -588,72 +620,63 @@
        "98       Nagpur       Nagpur      Nagpur   440015.0   AAACR8597E   \n",
        "99       Nagpur       Nagpur      Nagpur   440012.0   ABUPK3997P   \n",
        "\n",
-       "     Account_Number Vendor_Code   Key  \n",
-       "0   200120110000327      194585  0001  \n",
-       "1   059010200006828      194237  0001  \n",
-       "2    50200001726409      475311  0001  \n",
-       "3     OCC 412808192      193813  0001  \n",
-       "4        1250004863      193850  0001  \n",
-       "..              ...         ...   ...  \n",
-       "95  912020045649271      194457  0001  \n",
-       "96   02520100012058      460499  0001  \n",
-       "97  097302000001328      194762  0001  \n",
-       "98      20003790926      194662  0001  \n",
-       "99  870030100001200      460842  0001  \n",
+       "     Account_Number Vendor_Code   Key     Contact  \n",
+       "0   200120110000327      194585  0001  9123456698  \n",
+       "1   059010200006828      194237  0001  9123456698  \n",
+       "2    50200001726409      475311  0001  9123456698  \n",
+       "3     OCC 412808192      193813  0001  9123456698  \n",
+       "4        1250004863      193850  0001  9123456698  \n",
+       "..              ...         ...   ...         ...  \n",
+       "95  912020045649271      194457  0001  9123456698  \n",
+       "96   02520100012058      460499  0001  9650464908  \n",
+       "97  097302000001328      194762  0001  9650464908  \n",
+       "98      20003790926      194662  0001  9971440986  \n",
+       "99  870030100001200      460842  0001  9971440986  \n",
        "\n",
-       "[100 rows x 13 columns]"
+       "[100 rows x 14 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df1=df.head(100)\n",
+    "Contact=pd.Series([])\n",
+    "for i in range(len(df1)):\n",
+    "    if df1[\"State\"][i] == \"Gujrat\":\n",
+    "        Contact[i]=\"9871057398\"\n",
+    " \n",
+    "    elif df1[\"State\"][i] == \"Mumbai Region\":\n",
+    "        Contact[i]=\"9650464908\"\n",
+    " \n",
+    "    elif df1[\"State\"][i] == \"Rest Maharashtra\":\n",
+    "        Contact[i]=\"9971440986\"\n",
+    " \n",
+    "    elif df1[\"State\"][i]==\"Karnatake\":\n",
+    "        Contact[i]=\"9350230669\"\n",
+    "        \n",
+    "    elif df1[\"State\"][i]==\"NCR-Delhi\":\n",
+    "        Contact[i]=\"9354671882\"\n",
+    "        \n",
+    "    else:\n",
+    "        Contact[i]=\"9123456698\"\n",
+    "         \n",
+    "# inserting new column with values of list made above       \n",
+    "df1.insert(13, \"Contact\", Contact)\n",
+    " \n",
+    "# list output\n",
     "df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Sr.No.            0\n",
-       "Provider Code     0\n",
-       "Hospital_Name     0\n",
-       "Address           0\n",
-       "State             0\n",
-       "District          0\n",
-       "City              0\n",
-       "Area              0\n",
-       "Pin_Code          0\n",
-       "Pan_Card No.      0\n",
-       "Account_Number    0\n",
-       "Vendor_Code       0\n",
-       "Key               0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_excel(r\"C:\\Users\\jhaan\\Desktop\\RGI_Network_List_3527\\task1.xls\")"
+    "df1.to_excel(r\"C:\\Users\\jhaan\\Downloads\\RGI_Network_List_3527\\RGI_Network_List_3527.2.xls\")"
    ]
   },
   {
